nav see through overlap fix, custom offset

--- a/client-pwa/src/styles/layout.module.css
+++ b/client-pwa/src/styles/layout.module.css
@@ -12,6 +12,7 @@
     margin: 0;
     position: sticky;
     top: 0;
+    z-index: 100;
 }
 
 .pageContent {
@@ -20,6 +21,7 @@
     padding-right: 5%;
     box-sizing: border-box;
     margin: 0;
+    z-index: 10;
 }
 
 .contentWrapper {
